--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -4,7 +4,7 @@ jobs:
   testing-api:
     runs-on: ubuntu-lates
     env:
-      SERVICE_ACCOUNT_KEY: ${{ secretes.SERVICE_ACCOUNT_KEY }}
+      SERVICE_ACCOUNT_KEY: ${{ secrets.SERVICE_ACCOUNT_KEY }}
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
@@ -12,10 +12,10 @@ jobs:
         run: |
           pip3 install virtualenv
           virtual venv
-          source venv/script/acivate
+          source venv/bin/acivate
       - name: Installing dependencies
         run: |
-          pip install dvc-gs
+          pip install dvc[gs]
           pip install -r requirements_test.txt
       - name: Test Api
         run: |
