--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -1,5 +1,8 @@
 name: Continuous Training
 on:
+  push:
+    branches:
+      - workflow_continuous_training
   schedule:
     - cron: '0 */6 * * *'
   workflow_dispatch:
