--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -2,7 +2,7 @@ name: Testing Api
 on: [push, pull_request]
 jobs:
   testing-api:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       SERVICE_ACCOUNT_KEY: ${{ secrets.SERVICE_ACCOUNT_KEY }}
     steps:
@@ -11,7 +11,7 @@ jobs:
       - name: Creating and activating virtualenv
         run: |
           pip3 install virtualenv
-          virtual venv
+          virtualenv venv
           source venv/bin/acivate
       - name: Installing dependencies
         run: |
