fixing activate typo

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -12,7 +12,7 @@ jobs:
         run: |
           pip3 install virtualenv
           virtualenv venv
-          source venv/bin/acivate
+          source venv/bin/activate
       - name: Installing dependencies
         run: |
           pip install dvc[gs]
