--- a/.github/workflows/continuous_training.yaml
+++ b/.github/workflows/continuous_training.yaml
@@ -1,10 +1,7 @@
 name: Continuous Training
-on:
-  push:
-    branches:
-      - workflow_continuous_training
+on: 
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 6 * * *'
   workflow_dispatch:
     inputs:
       reason:
