--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -3,7 +3,7 @@ on:
   push:
      branches:
       - main
-  workflow-run:
+  workflow_run:
     workflows: ["Continuous Training"]
     branches: [main]
     types:
